--- a/frontend/android/app/src/main/res/layout/activity_login.xml
+++ b/frontend/android/app/src/main/res/layout/activity_login.xml
@@ -6,32 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity">
 
-    <View
-        android:id="@+id/v1"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"></View>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_above="@+id/RLLoginForm">
 
-    <ImageView
-        android:layout_centerHorizontal="true"
-        android:background="@mipmap/icon"
+        <ImageView
+            android:layout_centerHorizontal="true"
+            android:background="@mipmap/icon"
 
-        android:id="@+id/IVAppIcon"
-        android:layout_below="@+id/v1"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+            android:id="@+id/IVAppIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
-    <TextView
-        android:id="@+id/TVAppName"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_below="@+id/IVAppIcon"
-        android:text="Career-Tinder"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/TVAppName"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_below="@+id/IVAppIcon"
+            android:text="Career-Tinder"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+
+
 
     <RelativeLayout
-        android:layout_marginTop="230dp"
+        android:layout_centerVertical="true"
         android:id="@+id/RLLoginForm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -72,6 +77,7 @@
             android:paddingLeft="130dp"
             android:paddingRight="130dp"
             android:layout_marginTop="25dp"
+            android:layout_marginBottom="20dp"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
