--- a/frontend/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/frontend/android/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/icon" />
+        app:srcCompat="@drawable/career_tinder_logo" />
 
     <TextView
         android:id="@+id/textView2"
@@ -150,7 +150,7 @@
         android:id="@+id/createMyAccountBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="#2274A5"
+        android:background="@color/colorPrimary"
         android:text="@string/createAccountBtn"
         android:textColor="#F2F2F2"
         android:textSize="18sp"
