--- a/frontend/android/app/src/main/res/drawable/et_login.xml
+++ b/frontend/android/app/src/main/res/drawable/et_login.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#77dddddd"/>
+    <solid android:color="#D9E0E7"/>
     <corners android:radius="15dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
