--- a/frontend/android/app/src/main/res/layout/activity_main.xml
+++ b/frontend/android/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:background="#00CC66"
+        android:onClick="login"
         android:text="@string/loginBtn"
         android:textColor="#F2F2F2"
         android:textSize="18sp"
