--- a/frontend/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/frontend/android/app/src/main/res/layout/activity_sign_up.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/career_tinder_logo" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/TVScreenTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -47,7 +47,7 @@
         android:textColorHint="#6F7070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/TVScreenTitle" />
 
     <EditText
         android:id="@+id/emailAddress"
