--- a/frontend/android/app/src/main/res/layout/activity_post_signup.xml
+++ b/frontend/android/app/src/main/res/layout/activity_post_signup.xml
@@ -69,6 +69,8 @@
 
         <EditText
             android:id="@+id/ETWorkExperience"
+            android:digits="0123456789."
+            android:inputType="numberDecimal"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
