--- a/frontend/android/app/src/main/res/layout/activity_post_signup.xml
+++ b/frontend/android/app/src/main/res/layout/activity_post_signup.xml
@@ -15,6 +15,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="24dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
