Splash Activity added for branding and flow control. Missing fields added in PostSignup.java. Placeholder Dashboards added (WIP). PreferenceManager added for flow control: login state, user type and auth code.

--- a/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
@@ -96,7 +96,7 @@
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_ballot_black_24"
             android:ems="10"
-            android:gravity="start|top"
+            android:gravity="center_vertical"
             android:hint="@string/jobDescriptionText"
             android:inputType="textMultiLine"
             android:paddingLeft="15dp"
