--- a/frontend/android/app/src/main/res/layout/activity_login.xml
+++ b/frontend/android/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,7 +51,8 @@
             android:background="@drawable/et_login"
             android:layout_width="match_parent"
             android:paddingLeft="15dp"
-            android:hint="Username"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
             android:layout_height="50dp" />
 
         <EditText
