--- a/frontend/android/app/src/main/res/layout/activity_job_openings_list.xml
+++ b/frontend/android/app/src/main/res/layout/activity_job_openings_list.xml
@@ -25,12 +25,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="40dp"
-        android:scrollbars="vertical"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="60dp"
+        android:background="@android:color/white"
         android:foregroundGravity="center_horizontal"
-        android:background="#00000000"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TVJobOpenings" />
 
+    <Button
+        android:id="@+id/addJobOpeningBtn"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/addNewJobOpeningText"
+        android:textColor="#F2F2F2"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
