--- a/frontend/android/app/src/main/res/values/colors.xml
+++ b/frontend/android/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#0F375E</color>
     <color name="colorPrimaryDark">#0F375E</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#FBC02D</color>
     <color name="colorGrey">#D9E0E7</color>
     <color name="colorWhite">#FFFFFF</color>
 </resources>
