--- a/frontend/android/app/src/main/res/menu/company_drawer.xml
+++ b/frontend/android/app/src/main/res/menu/company_drawer.xml
@@ -4,14 +4,14 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_job_list"
-            android:icon="@drawable/baseline_work_white_18"
-            android:title="@string/menu_job_list" />
-        <item
-            android:id="@+id/nav_edit_profile"
-            android:icon="@drawable/baseline_edit_white_18"
-            android:title="@string/menu_edit_profile" />
+        <!--<item-->
+            <!--android:id="@+id/nav_job_list"-->
+            <!--android:icon="@drawable/baseline_work_white_18"-->
+            <!--android:title="@string/menu_job_list" />-->
+        <!--<item-->
+            <!--android:id="@+id/nav_edit_profile"-->
+            <!--android:icon="@drawable/baseline_edit_white_18"-->
+            <!--android:title="@string/menu_edit_profile" />-->
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/baseline_account_circle_white_18"
