--- a/frontend/android/app/src/main/res/menu/company_drawer.xml
+++ b/frontend/android/app/src/main/res/menu/company_drawer.xml
@@ -13,6 +13,10 @@
             <!--android:icon="@drawable/baseline_edit_white_18"-->
             <!--android:title="@string/menu_edit_profile" />-->
         <item
+            android:id="@+id/nav_candidates"
+            android:icon="@drawable/baseline_whatshot_white_24"
+            android:title="@string/menu_logout" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/baseline_account_circle_white_18"
             android:title="@string/menu_logout" />
